--- a/style.css
+++ b/style.css
@@ -1,13 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap');
+*{
+    box-sizing: border-box;
+}
 body{
     font-family: 'Bebas Neue', cursive;
     font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
 }
-
-
                                 /************* Utility-Classes ****************/
+section{
+    /* border: 1px solid red; */
+    height: 450px;
+    width: 100%;
+    margin: 0 auto;
+}
+.sec-div{
+    float: left;
+    width: 50%;
+    height: 100%;
+    /* border: 2px solid black; */
+}
+img{
+    display: block;
+    height: 100%;
+}
+h2{
+    font-family: Bebas Neue;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 48px;
+    color: #363958;
+}
+h3{
+    color: #363958;
+    font-weight: 700;
+}
+a{
+    text-decoration: none;
+    display: inline-block;
+}
+p{
+    color: #3E3E3E;
+}
+.text-color1{
+    color: #F46060;
+}
+.text-color2{
+    color: #363958;
+}
 .btn{
     background: linear-gradient(90deg, #FC5E51 -0.03%, #F59E75 100.02%);
     color: white;
@@ -15,25 +58,10 @@ body{
     padding: 10px 20px;
     border-radius: 5px;
 }
-.half-width{
-    border: 2px solid;
-    height: 95%;
-    width: 40%;
-    margin-left: 5%;
-    float: left;
-    padding-left: 2% ;
-}
-img{
-    height: 100%;
-}
-section{
-    overflow: hidden;
-    height: 500px;
-    border: 2px solid red;
-}
 
 
-                                /************* Navigation_bar *************/
+/************************************* Navigation *****************************************/
+
 
 ul{
     list-style-type: none;
@@ -57,110 +85,129 @@ li a{
     font-weight: 700;
     font-size: 12px;
     border-radius: 3px;
+    margin: 2px;
+    background: #eeeeee;
 }
-li a:hover:not(.active) {
-    background-color: #ddd;
-}
+
 
 li a.active {
     color: white;
     background: linear-gradient(0deg, #FF8063 -28.33%, #F46060 95.83%);
 }
 
-                        /************* SECTION_1 ***************/
 
-.section_1 .half-width h1, .section_1 .half-width h2{
+
+/************************************* SECTION_1 *****************************************/
+
+.sec1div1{
+    padding: 43px 0px 0px 190px;
+}
+.sec1div1 h1, .sec1div1 h2{
     font-family: Bebas Neue;
-    color: #363958;
+    font-style: normal;
+    font-weight: bold;
     font-size: 80px;
-    line-height: 10px;
+    line-height: 5px;
 }
-.section_1 .half-width h1{
-    color: #F46060;
+.sec1div2 img{
+    margin: 100px 0px 0px 163px;
+    height: 80%;
 }
-                        /************* SECTION_3 ***************/
-.section_3{
-    background: #E5E5E5;
-    height: 710px;
+
+
+/************************************* SECTION_2 *****************************************/
+
+
+.sec2div2{
+    padding: 116px;
 }
-.section_3 h2{
-    text-align: center;
-    font-family: Bebas Neue;
-    color: #363958;
-    font-size: 40px;
-    word-spacing: 5px;
-    letter-spacing: 1px;
+.sec2div1 img{
+    margin:0px 0px 0px 177px;
+    height: 80%;
 }
-.section_3 h2 span{
-    color: #FF8367;
-}
-.width33{
+
+
+/************************************* SECTION_3 *****************************************/
+.sec3com{
     float: left;
     width: 370px;
     height: 374px;
     background: #FFFFFF;
     box-shadow: 0px 6.5812px 19.7436px rgba(0, 0, 0, 0.07);
     border-radius: 19.7436px;
-    border: 2px solid red;
-    margin-left: 50px ;
+    margin-left: 25px ;
 }
-.width33 img{
+.sec3com :not(img){
+padding-left:20px;
+}
+.section_3{
+    background: #f3f3f3;
+    height: 710px;
+}
+.section_3 h2{
+    text-align: center;
+    padding: 50px 0px;
+}
+.sec3div1{
+    margin-left: 100px ;
+}
+.sec3com img{
+    display: block;
     width: 343.54px;
     height: 213.23px;
+    margin: 10px;
 }
 .width33 h3, .width33 p{
     margin-left: 10px;
     line-height: 28px;
 }
 
-                    /************* SECTION_4 ***************/
+
+/************************************* Footer *****************************************/
 .section_4{
-    height: 645px;
-    border: 2px solid black;
+    width: 90%;
+    height: 540px;
+    margin: 0 auto;
 }
-.fd1{
+.footerDiv1{
     background-image: url("./images/Group_33094_1.png");
     background-size: cover;
     width: 906px;
     height: 225px;
     margin: 90px auto;
 }
-.fd1 h2{
-    font-family: Bebas Neue;
+.footerDiv1 h2{
     font-style: normal;
-    font-weight: bold;
     font-size: 64px;
     line-height: 64px;
     color: #FFFFFF;
     margin:  80px 125px;
     float: left;
+    letter-spacing: 1px;
 }
-.fd1 a{
+.footerDiv1 a{
     float: right;
     margin:  100px 125px;
 }
 
-.fd2{
-    border: 2px solid red;
+.footerDiv2{
     text-align: center;
 }
-.fd2 p{
+.footerDiv2 p{
     font-family: Bebas Neue;
     font-style: normal;
-    font-weight: bold;
     font-size: 24px;
     line-height: 24px;
     color: #696871;
 }
-.fd2 h2{
+.footerDiv2 h2{
     font-family: Roboto;
     font-style: normal;
-    font-weight: bold;
     font-size: 36px;
     line-height: 42px;
-    color: #363958;
+    margin: 20px 0px;
 }
-.fd2 img{
+.footerDiv2 img{
     display: inline-block;
     width: 40px;
     height: 40px;
