--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
 }
                                 /************* Utility-Classes ****************/
 section{
-    /* border: 1px solid red; */
     height: 450px;
     width: 100%;
     margin: 0 auto;
@@ -20,7 +19,6 @@ section{
     float: left;
     width: 50%;
     height: 100%;
-    /* border: 2px solid black; */
 }
 img{
     display: block;
@@ -43,16 +41,16 @@ a{
     display: inline-block;
 }
 p{
-    color: #3E3E3E;
+    color: #2d3436;
 }
 .text-color1{
-    color: #F46060;
-}
-.text-color2{
     color: #363958;
 }
+.text-color2{
+    color: #F46060;
+}
 .btn{
-    background: linear-gradient(90deg, #FC5E51 -0.03%, #F59E75 100.02%);
+    background: #FF8063;
     color: white;
     text-decoration: none;
     padding: 10px 20px;
@@ -163,8 +161,20 @@ padding-left:20px;
 }
 
 
+/************************************* Section_4 *****************************************/
+
+.skill-text, .skill-img{
+    float: left;
+    width: 50%;
+}
+.skill-text{
+    padding: 4px 0px 0px 100px;
+}
+.skill-img img{
+    width: 100%;
+}
 /************************************* Footer *****************************************/
-.section_4{
+.footSec{
     width: 90%;
     height: 540px;
     margin: 0 auto;
@@ -198,7 +208,6 @@ padding-left:20px;
     font-style: normal;
     font-size: 24px;
     line-height: 24px;
-    color: #696871;
 }
 .footerDiv2 h2{
     font-family: Roboto;
